# kimchi

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ABOUT-NLS  API.json  API.md  AUTHORS  CONTRIBUTE.md  COPYING  ChangeLog  IBM-license-blacklist  Makefile.am  README.md  VERSION  __init__.py  autogen.sh  build_packages.py  check_spec_errors.sh  check_ui_code_errors.sh  config.py.in  configure.ac  dependencies.yaml  disks.py  distroloader.py  fedora-dev-deps.list  fedora-runtime-deps.list  i18n.py  imageinfo.py  index.html  iscsi.py  isoinfo.py  kimchi.conf  kvmusertests.py  mockmodel.py  netinfo.py  network.py  opensuse-leap-dev-deps.list  opensuse-leap-runtime-deps.list  osinfo.py  (+18 more)
contrib/: Makefile.am  check_i18n.py  kimchi.spec.fedora.in  kimchi.spec.suse.in  kimchid-upstart.conf.debian  kimchid-upstart.conf.fedora  kimchid.service.debian  kimchid.service.fedora  kimchid.service.ubuntu  kimchid.sysvinit  make-deb.sh.in  wok.spec.fedora.in  wok.spec.suse.in  wokd-upstart.conf.debian  wokd-upstart.conf.fedora  wokd.service.fedora  wokd.sysvinit
contrib/DEBIAN/: Makefile.am  control.in  postinst  postrm
docs/: API.md  CI.md  Makefile.am  README-federation.md  README.md  README.md.tmpl  deps.md.tmpl  fedora-deps.md  kimchid.8  kimchid.8.in  opensuse-deps.md  opensuse-leap-deps.md  ubuntu-deps.md
src/: Makefile.am  burnetd.in  firewalld.xml  kimchi.conf  kimchi.conf.in  kimchid.in  nginx.conf.in  wok.conf.in  wokd.in
src/burnet/: Makefile.am  __init__.py  asynctask.py  config.py  config.py.in  controller.py  isoinfo.py  mockmodel.py  model.py  objectstore.py  osinfo.py  root.py  screenshot.py  server.py  template.py  vmtemplate.py  vnc.py  websocket.py  xmlutils.py
src/distros.d/: Makefile.am  debian.json  fedora.json  gentoo.json  opensuse.json  ubuntu.json
src/kimchi/: API.json  Makefile.am  __init__.py  asynctask.py  auth.py  basemodel.py  cachebust.py  config.py.in  controller.py  disks.py  distroloader.py  exception.py  featuretests.py  i18n.py  imageinfo.py  iscsi.py  isoinfo.py  kvmusertests.py  mockmodel.py  model.py  netinfo.py  network.py  networkxml.py  objectstore.py  osinfo.py  proxy.py  repositories.py  rollbackcontext.py  root.py  scan.py  screenshot.py  server.py  sslcert.py  swupdate.py  template.py  utils.py  vmdisks.py  vmtemplate.py  vnc.py  xmlutils.py  (+1 more)
src/kimchi/control/: Makefile.am  __init__.py  base.py  config.py  cpuinfo.py  debugreports.py  groups.py  host.py  interfaces.py  networks.py  peers.py  plugins.py  storagepools.py  storageservers.py  storagevolumes.py  tasks.py  templates.py  users.py  utils.py  vms.py
src/kimchi/model/: Makefile.am  __init__.py  config.py  cpuinfo.py  debugreports.py  diskutils.py  featuretests.py  groups.py  host.py  hostdev.py  interfaces.py  libvirtconnection.py  libvirtstoragepool.py  model.py  networks.py  peers.py  plugins.py  storagepools.py  storageservers.py  storagetargets.py  storagevolumes.py  tasks.py  templates.py  users.py  utils.py  vmhostdevs.py  vmifaces.py  vms.py  vmsnapshots.py  vmstorages.py
src/kimchi/model_/: config.py  debugreports.py  host.py  interfaces.py  libvirtconnection.py  libvirtstoragepool.py  model.py  networks.py  storagepools.py  storageservers.py  storagetargets.py  storagevolumes.py  templates.py  utils.py  vmifaces.py  vms.py
src/kimchi/xmlutils/: Makefile.am  disk.py  graphics.py  interface.py  network.py  qemucmdline.py  utils.py
src/nginx/: Makefile.am  kimchi.conf.in  wok.conf.in
src/wok/: API.json  Makefile.am  __init__.py  asynctask.py  auth.py  basemodel.py  cachebust.py  config.py.in  exception.py  i18n.py  objectstore.py  proxy.py  rollbackcontext.py  root.py  server.py  sslcert.py  template.py  utils.py
src/wok/control/: Makefile.am  __init__.py  base.py  plugins.py  tasks.py  utils.py
src/wok/model/: Makefile.am  __init__.py  model.py  plugins.py  tasks.py
src/wok/plugins/: Makefile.am  __init__.py
src/wok/xmlutils/: Makefile.am  utils.py
tests/: Makefile.am  MockModelTests.py  ModelTests.py  OSInfoTests.py  RestTests.py  ServerTests.py  VMTemplateTests.py  __init__.py  iso_gen.py  run_tests.sh  run_tests.sh.in  run_tests_RHEL6.sh  test_authorization.py  test_config.py.in  test_disks.py  test_exception.py  test_host.py  test_livemigration.py  test_mock_network.py  test_mock_storagepool.py  test_mock_storagevolume.py  test_mockmodel.py  test_model.py  test_model_libvirtevents.py  test_model_network.py  test_model_storagepool.py  test_model_storagevolume.py  test_network.py  test_networkxml.py  test_objectstore.py  test_osinfo.py  test_plugin.py  test_rest.py  test_rollbackcontext.py  test_server.py  test_storagepool.py  test_storagepoolxml.py  test_template.py  test_utils.py  test_vmtemplate.py  (+2 more)
tests/ui/: README.md  pytest.ini  requirements.txt  run_tests.sh  test_templates.py
tests/ui/pages/: templates.py
ui/css/: Makefile.am  dev.base.css  dev.jquery-ui.css  dev.main.css  dev.style.css  jquery-ui.custom.css  kimchi.css
ui/css/fontawesome/: Makefile.am  fontawesome.css
ui/css/fonts/: Makefile.am
ui/css/novnc/: Makefile.am
ui/css/opensans/: Makefile.am  opensans.css
ui/css/spice/: Makefile.am  spice.css
ui/css/src/: bootstrap-select.custom.scss  bootstrap.custom.scss  kimchi.scss  wok.scss
ui/pages/: Makefile.am  burnet-ui.html.tmpl  dev-ui.html.tmpl  error.html.tmpl  guest-add.html.tmpl  guest-cdrom-edit.html.tmpl  guest-clone.html.tmpl  guest-edit.html.tmpl  guest-media.html.tmpl  guest-migration.html.tmpl  guest-storage-add.html.tmpl  guest.html.tmpl  guestTab.html.tmpl  guests.html.tmpl  i18n.html.tmpl  i18n.json.tmpl  kimchi-ui.html.tmpl  login-window.html.tmpl  login.html.tmpl  network-add.html.tmpl  network-edit.html.tmpl  network.html.tmpl  report-add.html.tmpl  report-rename.html.tmpl  repository-add.html.tmpl  repository-edit.html.tmpl  spice.html.tmpl  storage.html.tmpl  storagepool-add-volume.html.tmpl  storagepool-add.html.tmpl  storagepool-resize-volume.html.tmpl  template-add.html.tmpl  template-edit.html.tmpl  template.html.tmpl  templates.html.tmpl  vnc_auto.html.tmpl  wok-ui.html.tmpl
(+1916 files in other folders)
